<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FOODY</string>
    <string name="default_web_client_id">320469794625-3vnltsvdl6vameej3443e7t2lvh87rer.apps.googleusercontent.com</string>
    <string name="facebook_client_token">EAAF9JYZBqKf8BOyG0T86yenZByoNmtdXJO8qwvblPf4ZCuGcLlpBlgdfwWlOeSuBEVMYAZCinI7S7LtBbehyRD6UBc6zToc7gwqXpsoxxYeB9JwOsJFDfnQnInyHoShxjzlUTjuTm2gLaT5jNbLGZCVtw2bQCUJWOvZBzVWoLQ5mQQPOLGh7jcHTEW5DIyqExc8PxyiHT6lVplmZCagZBZAgVPXzda3I51ZCt6f7YZD</string>
    <string name="project_id" translatable="false">foody-102190122</string>
    <string name="facebook_app_id">419075254266367</string>
    <string name="fb_login_protocol_scheme">fb419075254266367</string>
    <string name="student">102190122 Phạm Niên Kỷ</string>
    <string name="loading">Loading ...</string>
    <string name="version">Version </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="or">Or</string>
    <string name="login_with_facebook">Log In With Facebook</string>
    <string name="login_with_google">Log In With Google</string>
    <string name="forgotten_password">Forgotten Password</string>
    <string name="repeat_pwd">Repeat password</string>
    <string name="error_signup_message">You have not entered yet</string>
    <string name="repeat_pwd_message">Please enter the same password as above</string>
    <string name="success_signup_message">Account successfully created</string>
    <string name="processing">Processing ...</string>
    <string name="failed_login_message">Invalid Account</string>
    <string name="email_registered_message">Email is already registered.</string>
    <string name="error_checking_email_message">Error checking email.</string>
    <string name="recover_password">Password Recovery</string>
    <string name="password_recovery_string">Please enter your Email address in the box below to recover your password</string>
    <string name="account_chain">Do not have an account</string>
    <string name="new_signup"><u>New sign up</u></string>
    <string name="invalid_email_message">Invalid Email</string>
    <string name="email_sending_message">Email sent successfully</string>
    <string name="place">Place</string>
    <string name="food">Food</string>
    <string name="lastest">Lastest</string>
    <string name="category">Category</string>
    <string name="location">Da Nang City</string>
    <string name="nearby">Nearby</string>
    <string name="order_delivery">Order Delivery</string>
    <string name="gameandfun">Game and Fun</string>
    <string name="review">Reviews</string>
    <string name="blog">Blogs</string>
    <string name="topmember">Top members</string>
    <string name="order">Order</string>
    <string name="upload">Upload</string>
    <string name="checkin">Check in</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="currently_open">Currently Open</string>
    <string name="closed">Closed</string>
    <string name="wifi_update">Wifi Update</string>
    <string name="enter_wifi_name">Enter wifi name</string>
    <string name="enter_wifi_password">Enter wifi password</string>
    <string name="agree">OK</string>
    <string name="error_adding_wifi">Please enter full wifi information</string>
    <string name="add_wifi_success">Wifi successfully added</string>
    <string name="post">Post</string>
    <string name="tusonhouse">Tu Son House</string>
    <string name="done">Done</string>
    <string name="menu">Menu</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="maximum_price">Maximum price (VND)</string>
    <string name="minimum_price">Minimum price (VND)</string>
    <string name="delivery">Delivery</string>
    <string name="non_delivery">Non - delivery</string>
    <string name="open_time">Open time</string>
    <string name="close_time">Close time</string>
    <string name="branch">Branch</string>
    <string name="food_name">Food name</string>
    <string name="price">Price (VND)</string>
    <string name="save_restaurant">Save restaurant</string>
    <string name="add_menu">Add menu</string>
    <string name="error_price_added_message">Please enter the maximum price more expensive than the minimum price</string>
    <string name="success_restaurant_added_message">Restaurant successfully added</string>"
s</resources>