<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >
    
    <EditText
        android:id="@+id/edWifiName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_wifi_name"
        />

    <EditText
        android:id="@+id/edWifiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_wifi_password"
        />
    <Button
        android:id="@+id/btnAgreeUpdateWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agree"
        />

</LinearLayout>