<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorBackgroundLogin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            app:srcCompat="@drawable/pic_foody"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/edEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/colorWhite"
            android:drawableStart="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/edPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/colorWhite"
            android:drawableStart="@drawable/icpassword"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:isScrollContainer="false"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/radius_button"
            android:baselineAligned="false"
            android:drawableLeft="@drawable/ic_login"
            android:drawableTint="@color/colorBackgroundLogin"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorWhite" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/or"
                android:textColor="@color/colorWhite"
                tools:ignore="TextSizeCheck" />

            <View
                android:id="@+id/view6"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorWhite" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogInWithFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/radius_button"
            android:drawableLeft="@drawable/ic_facebook"
            android:paddingLeft="15dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="@string/login_with_facebook"
            android:textColor="@color/colorPrimary"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/btnLogInWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/radius_button"
            android:drawableLeft="@drawable/ic_google"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login_with_google"
            android:textColor="@color/colorPrimary"
            tools:ignore="RtlHardcoded,RtlSymmetry,TouchTargetSizeCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtForgottenPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgotten_password"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signup"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>