<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLogin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="200dp"
                app:srcCompat="@drawable/pic_foody"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txtRecoverPwd"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/recover_password"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/txtRecoveryPwdString"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/password_recovery_string"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/edEmailRecovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/colorWhite"
                android:drawableStart="@drawable/ic_email"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,TextFields" />

            <Button
                android:id="@+id/btnRecovery"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/radius_button"
                android:baselineAligned="false"
                android:drawableLeft="@drawable/ic_signup"
                android:drawableTint="@color/colorBackgroundLogin"
                android:paddingStart="100dp"
                android:paddingEnd="100dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/signup"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtAccountChain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/account_chain"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/txtNewSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_signup"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>