<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgTakeAPhoto"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:src="@drawable/img_mini_camera" />

        <LinearLayout
            tools:ignore="InefficientWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edFoodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/food_name"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/price"
                    tools:ignore="HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Spinner
                    android:id="@+id/spinnerMenu"
                    tools:ignore="TouchTargetSizeCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </Spinner>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnAddMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_menu" />

</LinearLayout>