<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLogin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="200dp"
                app:srcCompat="@drawable/pic_foody"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/edEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/colorWhite"
                android:drawableStart="@drawable/ic_email"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/edPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/colorWhite"
                android:drawableStart="@drawable/icpassword"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:isScrollContainer="false"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textColorLink="@color/colorWhite"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edRepeatPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/colorWhite"
                android:drawableStart="@drawable/icpassword"
                android:ems="10"
                android:hint="@string/repeat_pwd"
                android:inputType="textPassword"
                android:isScrollContainer="false"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textColorLink="@color/colorWhite"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/radius_button"
                android:baselineAligned="false"
                android:drawableLeft="@drawable/ic_signup"
                android:drawableTint="@color/colorBackgroundLogin"
                android:paddingStart="100dp"
                android:paddingEnd="100dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/signup"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>